Enable Mellanox NIC drivers
To support accelerated networking in Azure, the following modules
for Mellanox ConnectX-3 and Mellanox ConnectX-4 Lx need to be
built-in to the Hyper V kernel:

    mlx4_en, mlx4_core, mlx4_ib
    mlx5_core, mlx5_ib

--- a/config
+++ b/config
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: gcc (Clear Linux OS for Intel Architecture) 9.3.1 20200421 releases/gcc-9.3.0-159-g9300be2c74
+# Compiler: gcc (Clear Linux OS for Intel Architecture) 9.3.1 20200408 releases/gcc-9.3.0-123-g1a2a0af530
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=90301
@@ -972,7 +972,7 @@ CONFIG_NET_IPGRE=m
 # CONFIG_IP_MROUTE is not set
 CONFIG_SYN_COOKIES=y
 # CONFIG_NET_IPVTI is not set
-CONFIG_NET_UDP_TUNNEL=m
+CONFIG_NET_UDP_TUNNEL=y
 # CONFIG_NET_FOU is not set
 # CONFIG_NET_FOU_IP_TUNNELS is not set
 CONFIG_INET_AH=m
@@ -2037,7 +2037,7 @@ CONFIG_WIREGUARD=m
 CONFIG_MACVLAN=y
 CONFIG_MACVTAP=y
 # CONFIG_IPVLAN is not set
-CONFIG_VXLAN=m
+CONFIG_VXLAN=y
 # CONFIG_GENEVE is not set
 # CONFIG_GTP is not set
 CONFIG_MACSEC=m
@@ -2168,10 +2168,32 @@ CONFIG_SKGE_GENESIS=y
 CONFIG_SKY2=m
 # CONFIG_SKY2_DEBUG is not set
 CONFIG_NET_VENDOR_MELLANOX=y
-# CONFIG_MLX4_EN is not set
-# CONFIG_MLX5_CORE is not set
-# CONFIG_MLXSW_CORE is not set
-# CONFIG_MLXFW is not set
+CONFIG_MLX4_EN=y
+CONFIG_MLX4_CORE=y
+# CONFIG_MLX4_DEBUG is not set
+CONFIG_MLX4_CORE_GEN2=y
+CONFIG_MLX5_CORE=y
+CONFIG_MLX5_ACCEL=y
+CONFIG_MLX5_FPGA=y
+CONFIG_MLX5_CORE_EN=y
+CONFIG_MLX5_EN_ARFS=y
+CONFIG_MLX5_EN_RXNFC=y
+CONFIG_MLX5_MPFS=y
+CONFIG_MLX5_ESWITCH=y
+CONFIG_MLX5_CORE_IPOIB=y
+CONFIG_MLX5_FPGA_IPSEC=y
+CONFIG_MLX5_EN_IPSEC=y
+CONFIG_MLX5_SW_STEERING=y
+CONFIG_MLXSW_CORE=m
+CONFIG_MLXSW_CORE_HWMON=y
+CONFIG_MLXSW_CORE_THERMAL=y
+CONFIG_MLXSW_PCI=m
+CONFIG_MLXSW_I2C=m
+CONFIG_MLXSW_SWITCHIB=m
+CONFIG_MLXSW_SWITCHX2=m
+CONFIG_MLXSW_SPECTRUM=m
+CONFIG_MLXSW_MINIMAL=m
+CONFIG_MLXFW=y
 # CONFIG_NET_VENDOR_MICREL is not set
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_NET_VENDOR_MICROSEMI is not set
@@ -2600,7 +2622,7 @@ CONFIG_I2C_ALGOBIT=m
 #
 # Other I2C/SMBus bus drivers
 #
-# CONFIG_I2C_MLXCPLD is not set
+CONFIG_I2C_MLXCPLD=m
 # end of I2C Hardware Bus support
 
 # CONFIG_I2C_STUB is not set
@@ -4591,6 +4613,8 @@ CONFIG_ARCH_HAS_UACCESS_FLUSHCACHE=y
 CONFIG_ARCH_HAS_UACCESS_MCSAFE=y
 CONFIG_ARCH_STACKWALK=y
 CONFIG_SBITMAP=y
+CONFIG_PARMAN=m
+CONFIG_OBJAGG=m
 # CONFIG_STRING_SELFTEST is not set
 # end of Library routines
 
