--- a/config
+++ b/config
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200625 releases/gcc-10.1.0-262-gd9b3aa517b
+# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200702 releases/gcc-10.1.0-308-g41b504e91e
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=100101
@@ -4924,3 +4924,8 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_HYPERV_TESTING is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
+
+
+# kernel-config sources:
+# FILEVER=/usr/share/kernel-config/base-5.7-4-45
+# FILEVER=/usr/share/kernel-config/mandatory-5.7-4-45
