--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.7.7 Kernel Configuration
+# Linux/x86 5.7.8 Kernel Configuration
 #
 
 #
@@ -624,6 +624,7 @@ CONFIG_EFI_RCI2_TABLE=y
 CONFIG_UEFI_CPER=y
 CONFIG_UEFI_CPER_X86=y
 CONFIG_EFI_EARLYCON=y
+# CONFIG_EFI_CUSTOM_SSDT_OVERLAYS is not set
 
 #
 # Tegra firmware driver
@@ -4927,5 +4928,5 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 
 
 # kernel-config sources:
-# FILEVER=/usr/share/kernel-config/base-5.7-4-45
-# FILEVER=/usr/share/kernel-config/mandatory-5.7-4-45
+# FILEVER=/usr/share/kernel-config/base-5.7-4-44
+# FILEVER=/usr/share/kernel-config/mandatory-5.7-4-44
