--- a/config
+++ b/config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.7.8 Kernel Configuration
+# Linux/x86 5.7.9 Kernel Configuration
 #
 
 #
-# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200702 releases/gcc-10.1.0-308-g41b504e91e
+# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200713 releases/gcc-10.1.0-382-g1aae91e617
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=100101
