--- a/config
+++ b/config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.7.9 Kernel Configuration
+# Linux/x86 5.7.10 Kernel Configuration
 #
 
 #
-# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200713 releases/gcc-10.1.0-382-g1aae91e617
+# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200720 releases/gcc-10.1.0-401-g124402d2c6
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=100101
