--- a/config
+++ b/config
@@ -1,14 +1,14 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.7.10 Kernel Configuration
+# Linux/x86 5.7.11 Kernel Configuration
 #
 
 #
-# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.1.1 20200720 releases/gcc-10.1.0-401-g124402d2c6
+# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.2.1 20200728 releases/gcc-10.2.0-28-gc0438ced53
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=100101
-CONFIG_LD_VERSION=234000000
+CONFIG_GCC_VERSION=100201
+CONFIG_LD_VERSION=235000000
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
