--- a/config
+++ b/config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.7.11 Kernel Configuration
+# Linux/x86 5.7.12 Kernel Configuration
 #
 
 #
-# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.2.1 20200728 releases/gcc-10.2.0-28-gc0438ced53
+# Compiler: gcc (Clear Linux OS for Intel Architecture) 10.2.1 20200729 releases/gcc-10.2.0-37-ge6262c0d20
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=100201
